Fix bug where arrowPopups could not be closed
This would occur when they had been opened from
the context menu (such as the Spotify importer
and the video share popup). The problem was that
when the context menu closed, it also removed
the invisible blocker div that belonged to
the arrow dialog.

--- a/styles/base.less
+++ b/styles/base.less
@@ -895,7 +895,8 @@ body.searching #search .loader {
 #contextmenu .option:hover {
 }
 
-#blocker {
+#context-menu-blocker,
+#arrow-popup-blocker {
     position: absolute;
     top: 0;
     left: 0;
